chore: added the correct parameters
