# docs/swagger.yaml
@@ -26,23 +26,23 @@ definitions:
           type: integer
         type: array
     type: object
-  main.adminUserResponse:
-    properties:
-      id:
-        type: integer
-      numFiles:
-        type: integer
-      spaceUsed:
-        type: integer
-      username:
-        type: string
-    type: object
   main.createCollectionBody:
     properties:
       description:
         type: string
       name:
         type: string
+    type: object
+  main.estimateDealBody:
+    properties:
+      durationBlks:
+        type: integer
+      replication:
+        type: integer
+      size:
+        type: integer
+      verified:
+        type: boolean
     type: object
   main.getApiKeysResp:
     properties:
@@ -51,14 +51,18 @@ definitions:
       token:
         type: string
     type: object
-  main.publicStatsResponse:
+  main.importDealBody:
     properties:
-      dealsOnChain:
-        type: integer
-      totalFiles:
-        type: integer
-      totalStorage:
-        type: integer
+      collection:
+        type: string
+      collectionPath:
+        type: string
+      dealIDs:
+        items:
+          type: integer
+        type: array
+      name:
+        type: string
     type: object
   main.userStatsResponse:
     properties:
@@ -109,19 +113,14 @@ paths:
       description: This endpoint is used to get all users.
       produces:
         - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/main.adminUserResponse'
-            type: array
+      responses: {}
       summary: Get all users
       tags:
-        - Admin
-        - Users
+        - admin
   /collections/add-content:
     post:
+      consumes:
+        - application/json
       description: When a collection is created, users with valid API keys can add contents to the collection. This endpoint can be used to add contents to a collection.
       parameters:
         - description: Contents to add to collection
@@ -132,11 +131,17 @@ paths:
             $ref: '#/definitions/main.addContentToCollectionParams'
       produces:
         - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       summary: Add contents to a collection
       tags:
         - collections
-  /collections/content/:collection-id:
+  /collections/content/{collection-id}:
     get:
       description: This endpoint is used to get contents in a collection. When a collection is created, this collection object is retrievable along with its content via this endpoint.
       parameters:
@@ -147,7 +152,11 @@ paths:
           type: string
       produces:
         - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
       summary: Get contents in a collection
       tags:
         - collections
@@ -186,6 +195,27 @@ paths:
   /collections/fs/add:
     post:
       description: This endpoint adds a file to a collection
+      parameters:
+        - description: Collection ID
+          in: query
+          name: col
+          required: true
+          type: string
+        - description: Collection ID Long
+          in: query
+          name: collection
+          required: true
+          type: string
+        - description: Content
+          in: query
+          name: content
+          required: true
+          type: string
+        - description: Path to file
+          in: query
+          name: path
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -195,6 +225,17 @@ paths:
   /collections/fs/list:
     get:
       description: This endpoint creates a new collection
+      parameters:
+        - description: Collection
+          in: query
+          name: col
+          required: true
+          type: string
+        - description: Directory
+          in: query
+          name: dir
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -236,6 +277,8 @@ paths:
         - collections
   /content/add:
     post:
+      consumes:
+        - multipart/form-data
       description: This endpoint is used to upload new content.
       produces:
         - application/json
@@ -268,27 +311,59 @@ paths:
       summary: Add IPFS object
       tags:
         - content
-  /content/aggregated/:content:
+  /content/aggregated/{content}:
     get:
       description: This endpoint returns aggregated content stats
+      parameters:
+        - description: Content ID
+          in: path
+          name: content
+          required: true
+          type: string
       produces:
         - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
       summary: Get aggregated content stats
       tags:
         - content
   /content/all-deals:
     get:
       description: This endpoint is used to get all deals for a user
+      parameters:
+        - description: Begin
+          in: query
+          name: begin
+          required: true
+          type: string
+        - description: Duration
+          in: query
+          name: duration
+          required: true
+          type: string
+        - description: All
+          in: query
+          name: all
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Get all deals for a user
       tags:
         - content
-  /content/bw-usage/:content:
+  /content/bw-usage/{content}:
     get:
       description: This endpoint returns content bandwidth
+      parameters:
+        - description: Content ID
+          in: path
+          name: content
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -298,6 +373,13 @@ paths:
   /content/create:
     post:
       description: This endpoint adds a new content
+      parameters:
+        - description: Content
+          in: body
+          name: body
+          required: true
+          schema:
+            type: string
       produces:
         - application/json
       responses: {}
@@ -307,33 +389,65 @@ paths:
   /content/deals:
     get:
       description: This endpoint lists all content with deals
+      parameters:
+        - description: Limit
+          in: query
+          name: limit
+          type: integer
+        - description: Offset
+          in: query
+          name: offset
+          type: integer
       produces:
         - application/json
       responses: {}
       summary: Content with deals
       tags:
         - content
-  /content/ensure-replication/:datacid:
+  /content/ensure-replication/{datacid}:
     get:
       description: This endpoint ensures that the content is replicated to the specified number of providers
+      parameters:
+        - description: Data CID
+          in: path
+          name: datacid
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Ensure Replication
       tags:
         - content
-  /content/failures/:content:
+  /content/failures/{content}:
     get:
       description: This endpoint returns all failures for a content
+      parameters:
+        - description: Content ID
+          in: path
+          name: content
+          required: true
+          type: string
       produces:
         - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
       summary: List all failures for a content
       tags:
         - content
   /content/importdeal:
     post:
       description: This endpoint imports a deal into the shuttle.
+      parameters:
+        - description: Import a deal
+          in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/main.importDealBody'
       produces:
         - application/json
       responses: {}
@@ -345,13 +459,25 @@ paths:
       description: This endpoint lists all content
       produces:
         - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
       summary: List all pinned content
       tags:
         - content
-  /content/read/:cont:
+  /content/read/{cont}:
     get:
       description: This endpoint reads content from the blockstore
+      parameters:
+        - description: CID
+          in: path
+          name: cont
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -360,7 +486,7 @@ paths:
         - content
   /content/staging-zones:
     get:
-      description: This endpoint is used to get staging zone for user
+      description: This endpoint is used to get staging zone for user.
       produces:
         - application/json
       responses: {}
@@ -382,9 +508,15 @@ paths:
       summary: Get content statistics
       tags:
         - content
-  /content/status/:id:
+  /content/status/{id}:
     get:
       description: This endpoint returns the status of a content
+      parameters:
+        - description: Content ID
+          in: path
+          name: id
+          required: true
+          type: integer
       produces:
         - application/json
       responses: {}
@@ -392,71 +524,131 @@ paths:
       tags:
         - content
   /deal/estimate:
-    get:
+    post:
       description: This endpoint estimates the cost of a deal
+      parameters:
+        - description: The size of the deal in bytes, the replication factor, and the duration of the deal in blocks
+          in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/main.estimateDealBody'
       produces:
         - application/json
       responses: {}
       summary: Estimate the cost of a deal
       tags:
         - deals
-  /deal/info/:dealid:
+  /deal/info/{dealid}:
     get:
       description: This endpoint returns the deal info for a deal
+      parameters:
+        - description: Deal ID
+          in: path
+          name: dealid
+          required: true
+          type: integer
       produces:
         - application/json
       responses: {}
       summary: Get Deal Info
       tags:
         - deals
-  /deal/make/:miner:
+  /deal/make/{miner}:
     post:
       description: This endpoint makes a deal for a given content and miner
+      parameters:
+        - description: Miner
+          in: path
+          name: miner
+          required: true
+          type: string
+        - description: Deal Request
+          in: body
+          name: dealRequest
+          required: true
+          schema:
+            type: string
       produces:
         - application/json
       responses: {}
       summary: Make Deal
       tags:
         - deals
-  /deal/proposal/:propcid:
+  /deal/proposal/{propcid}:
     get:
       description: This endpoint returns the proposal for a deal
+      parameters:
+        - description: Proposal CID
+          in: path
+          name: propcid
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Get Proposal
       tags:
         - deals
-  /deal/query/:miner:
+  /deal/query/{miner}:
     get:
       description: This endpoint returns the ask for a given CID
+      parameters:
+        - description: CID
+          in: path
+          name: miner
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Query Ask
       tags:
         - deals
-  /deal/status-by-proposal/:propcid:
+  /deal/status-by-proposal/{propcid}:
     get:
       description: Get Deal Status by PropCid
+      parameters:
+        - description: PropCid
+          in: path
+          name: propcid
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Get Deal Status by PropCid
       tags:
         - deals
-  /deal/status/:deal:
+  /deal/status/{deal}:
     get:
       description: This endpoint returns the status of a deal
+      parameters:
+        - description: Deal ID
+          in: path
+          name: deal
+          required: true
+          type: integer
       produces:
         - application/json
       responses: {}
       summary: Get Deal Status
       tags:
         - deals
-  /deal/status/:miner/:propcid:
+  /deal/status/{miner}/{propcid}:
     get:
       description: This endpoint returns the status of a deal
+      parameters:
+        - description: Miner
+          in: path
+          name: miner
+          required: true
+          type: string
+        - description: Proposal CID
+          in: path
+          name: propcid
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -479,6 +671,15 @@ paths:
         - application/json
       responses: {}
       summary: Transfer Status
+      tags:
+        - deals
+  /deals/failures:
+    get:
+      description: This endpoint returns a list of storage failures
+      produces:
+        - application/json
+      responses: {}
+      summary: Get storage failures
       tags:
         - deals
   /pinning/pins:
@@ -521,35 +722,7 @@ paths:
       summary: Add and pin object
       tags:
         - pinning
-  /pinning/pins/:id:
-    delete:
-      description: This endpoint deletes a pinned object.
-      parameters:
-        - description: id
-          in: path
-          name: id
-          required: true
-          type: string
-      produces:
-        - application/json
-      responses: {}
-      summary: Delete a pinned object
-      tags:
-        - pinning
-    get:
-      description: This endpoint returns a pinned object.
-      parameters:
-        - description: cid
-          in: path
-          name: id
-          required: true
-          type: string
-      produces:
-        - application/json
-      responses: {}
-      summary: Get a pinned objects
-      tags:
-        - pinning
+  /pinning/pins/{id}:
     post:
       description: This endpoint replaces a pinned object.
       parameters:
@@ -564,25 +737,50 @@ paths:
       summary: Replace a pinned object
       tags:
         - pinning
-  /public/by-cid/:cid:
+  /pinning/pins/{requestid}:
+    delete:
+      description: This endpoint deletes a pinned object.
+      parameters:
+        - description: requestid
+          in: path
+          name: requestid
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses: {}
+      summary: Delete a pinned object
+      tags:
+        - pinning
+    get:
+      description: This endpoint returns a pinned object.
+      parameters:
+        - description: cid
+          in: path
+          name: requestid
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses: {}
+      summary: Get a pinned objects
+      tags:
+        - pinning
+  /public/by-cid/{cid}:
     get:
       description: This endpoint returns the content associated with a CID
+      parameters:
+        - description: Cid
+          in: path
+          name: cid
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
       summary: Get Content by Cid
       tags:
         - public
-  /public/deal/failures:
-    get:
-      description: This endpoint returns a list of storage failures
-      produces:
-        - application/json
-      responses: {}
-      summary: Get storage failures
-      tags:
-        - public
-        - deals
   /public/info:
     get:
       description: This endpoint returns information about the node
@@ -592,7 +790,6 @@ paths:
       summary: Get public node info
       tags:
         - public
-        - deals
   /public/metrics/deals-on-chain:
     get:
       description: This endpoint is used to get deal metrics
@@ -613,9 +810,14 @@ paths:
       tags:
         - public
         - net
-  /public/miners/deals/:miner:
+  /public/miners/deals/{miner}:
     get:
       description: This endpoint returns all miners deals
+      parameters:
+        - description: Filter by miner
+          in: path
+          name: miner
+          type: string
       produces:
         - application/json
       responses: {}
@@ -623,9 +825,14 @@ paths:
       tags:
         - public
         - miner
-  /public/miners/failures/:miners:
+  /public/miners/failures/{miner}:
     get:
       description: This endpoint returns all miners
+      parameters:
+        - description: Filter by miner
+          in: query
+          name: miner
+          type: string
       produces:
         - application/json
       responses: {}
@@ -633,9 +840,14 @@ paths:
       tags:
         - public
         - net
-  /public/miners/stats/:miner:
+  /public/miners/stats/{miner}:
     get:
       description: This endpoint returns miner stats
+      parameters:
+        - description: Filter by miner
+          in: path
+          name: miner
+          type: string
       produces:
         - application/json
       responses: {}
@@ -680,11 +892,7 @@ paths:
       description: This endpoint is used to get public stats.
       produces:
         - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.publicStatsResponse'
+      responses: {}
       summary: Public stats
       tags:
         - public
@@ -739,9 +947,15 @@ paths:
       summary: Create API keys for a user
       tags:
         - User
-  /user/api-keys/:key:
+  /user/api-keys/{key}:
     delete:
       description: This endpoint is used to revoke a user API key. In estuary, every user is assigned with an API key, this API key is generated and issued for each user and is primarily use to access all estuary features. This endpoint can be used to revoke the API key thats assigned to the user.
+      parameters:
+        - description: Key
+          in: path
+          name: key
+          required: true
+          type: string
       produces:
         - application/json
       responses: {}
@@ -757,9 +971,7 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            type: string
       summary: Export user data
       tags:
         - User
